--- a/samples/BikeSharingApp/charts/Chart.yaml
+++ b/samples/BikeSharingApp/charts/Chart.yaml
@@ -1,5 +1,35 @@
-apiVersion: v1
-appVersion: "1.1"
+apiVersion: v2
+appVersion: "1.0"
 description: The master chart for BikeSharing sample app
 name: bikesharingsampleapp
-version: 0.1.1
+type: application
+version: 0.1.0
+
+dependencies:
+  - name: databases
+    version: 0.1.0
+    repository: "file://../Databases/charts/databases"
+  - name: bikes
+    version: 0.1.0
+    repository: "file://../Bikes/charts/bikes"
+  - name: bikesharingweb
+    version: 0.1.0
+    repository: "file://../BikeSharingWeb/charts/bikesharingweb"
+  - name: billing
+    version: 0.1.0
+    repository: "file://../Billing/charts/billing"
+  - name: gateway
+    version: 0.1.0
+    repository: "file://../Gateway/charts/gateway"
+  - name: reservation
+    version: 0.1.0
+    repository: "file://../Reservation/charts/reservation"
+  - name: reservationengine
+    version: 0.1.0
+    repository: "file://../ReservationEngine/charts/reservationengine"
+  - name: users
+    version: 0.1.0
+    repository: "file://../Users/charts/users"
+  - name: populatedatabase
+    version: 0.1.0
+    repository: "file://../PopulateDatabase/charts/populatedatabase"
