Update azure-pipelines-full.yml for Azure Pipelines

--- a/azure-pipelines-full.yml
+++ b/azure-pipelines-full.yml
@@ -76,7 +76,7 @@ stages:
     displayName: Deploy job
     environment: test
     pool:
-      name: 'ubuntu-latest'
+      vmImage: 'ubuntu-latest'
     strategy:
       runOnce:
         deploy:
