--- a/yaml-canary.yml
+++ b/yaml-canary.yml
@@ -42,6 +42,7 @@ stages:
                   percentage: '$(strategy.increment)'
                 displayName: deploy app updates
             postRouteTraffic: 
+              pool: server
               steps:
               - task: ManualValidation@0
                 inputs:
