--- a/yaml-canary.yml
+++ b/yaml-canary.yml
@@ -27,6 +27,27 @@ stages:
                   namespace: 'miferrac'
                   helmChart: 'samples/BikeSharingApp/charts'
                   releaseName: 'miferrac-bike'
+                  overrides: |
+                    bikesharingweb.ingress.hosts={miferrac.bikesharingweb.5.5.5.5.nip.io} 
+                    gateway.ingress.hosts={miferrac.gateway.5.5.5.5.nip.io} 
+                    bikesharingweb.ingress.annotations."kubernetes.io/ingress.class"=traefik 
+                    gateway.ingress.annotations."kubernetes.io/ingress.class"=traefik 
+                    bikes.image.repository expertdaysregistry.azurecr.io/bikes 
+                    bikes.image.tag $(Build.BuildId)
+                    billing.image.repository expertdaysregistry.azurecr.io/billing 
+                    billing.image.tag $(Build.BuildId)
+                    gateway.image.repository expertdaysregistry.azurecr.io/gateway 
+                    gateway.image.tag $(Build.BuildId)
+                    reservation.image.repository expertdaysregistry.azurecr.io/reservation 
+                    reservation.image.tag $(Build.BuildId)
+                    users.image.repository expertdaysregistry.azurecr.io/users 
+                    users.image.tag $(Build.BuildId)
+                    reservationengine.image.repository expertdaysregistry.azurecr.io/reservationengine 
+                    reservationengine.image.tag $(Build.BuildId)
+                    populatedatabase.image.repository expertdaysregistry.azurecr.io/populatedatabase 
+                    populatedatabase.image.tag $(Build.BuildId)
+                    bikesharingweb.image.repository expertdaysregistry.azurecr.io/bikesharingweb 
+                    bikesharingweb.image.tag $(Build.BuildId)
                 displayName: bake helm chart
             deploy:
               steps: 
