--- a/yaml-canary.yml
+++ b/yaml-canary.yml
@@ -20,6 +20,10 @@ stages:
             preDeploy:
               steps:
               - checkout: self
+              - task: HelmInstaller@1
+                displayName: Helm installer
+                inputs: 
+                  helmVersionToInstall: latest
               - task: Kubernetes@1
                 inputs:
                   connectionType: 'Kubernetes Service Connection'
